# c_text_editor

./: CMakeLists.txt  README.md  main.c  text
include/: charList.h  files.h  graphics.h  strings.h
src/: charList.c  files.c  graphics.c  strings.c
